--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -190,7 +190,7 @@ AssetManagementBrowser.HiddenColumns=Path
 LastLevel=/Game/SideScrollerCPP/Maps/SideScrollerExampleMap
 
 [ModuleFileTracking]
-DonkeyKong_SIS457.TimeStamp=2024.09.22-14.32.31
+DonkeyKong_SIS457.TimeStamp=2024.09.24-06.04.05
 DonkeyKong_SIS457.LastCompileMethod=Runtime
 PakFile.TimeStamp=2024.08.26-04.32.47
 PakFile.LastCompileMethod=Unknown
@@ -1095,7 +1095,7 @@ InstalledPlugins=XRVisualization
 
 [RootWindow]
 ScreenPosition=X=241.600 Y=0.000
-WindowSize=X=1396.800 Y=808.000
+WindowSize=X=1400.000 Y=808.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1882,6 +1882,9 @@ MRUItem0=/Game/SideScrollerCPP/Maps/SideScrollerExampleMap
 
 [PlacementMode]
 RecentlyPlaced=/Script/DonkeyKong_SIS457.MuroPegajoso;
+RecentlyPlaced=/Script/DonkeyKong_SIS457.MuroElectrico;
+RecentlyPlaced=/Script/DonkeyKong_SIS457.MuroCongelado;
+RecentlyPlaced=/Script/DonkeyKong_SIS457.MuroLadrillo;
 RecentlyPlaced=/Script/DonkeyKong_SIS457.Barril;
 RecentlyPlaced=/Game/Geometry/Meshes/Muro3/half_wall_txt_Causeway_wall_7.half_wall_txt_Causeway_wall_7;
 RecentlyPlaced=/Script/DonkeyKong_SIS457.Obstaculo;
@@ -1898,27 +1901,24 @@ RecentlyPlaced=/Game/StarterContent/Textures/T_Perlin_Noise_M_Mat.T_Perlin_Noise
 RecentlyPlaced=/Game/StarterContent/Textures/T_Ground_Gravel_Mat.T_Ground_Gravel_Mat;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Concrete_Grime_D.T_Concrete_Grime_D;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Concrete_Panels_D.T_Concrete_Panels_D;
-RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Clay_Beveled_Mat.T_Brick_Clay_Beveled_Mat;
-RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Clay_New_M.T_Brick_Clay_New_M;
-RecentlyPlaced=/Script/DonkeyKong_SIS457.MuroElectrico;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Geometry/Meshes/Muro1/stone_wall_wall_stone_low
-MRUItem1=/Game/Geometry/Meshes/Muro1/stone_wall_wall_stone_medium
-MRUItem2=/Game/Geometry/Meshes/Muro3/half_wall_txt_Causeway_wall_7
-MRUItem3=/Game/Geometry/Meshes/Muro3/half_wall_txt_Causeway_wall_5
-MRUItem4=/Game/Geometry/Meshes/Muro3/half_wall_txt_Causeway_wall_4
-MRUItem5=/Game/Geometry/Meshes/Muro3/Giant_causeway_atlas1
-MRUItem6=/Game/Geometry/Meshes/Muro3/Big_rock_atlas
-MRUItem7=/Game/Geometry/Meshes/Muro3/half_wall_txt_polySurface3
-MRUItem8=/Game/Geometry/Meshes/Muro3/half_wall_txt_Stone
-MRUItem9=/Game/Geometry/Meshes/Muro3/half_wall_txt_Causeway_wall_3
-MRUItem10=/Game/Geometry/Meshes/Muro3/half_wall_txt_Wall_2
-MRUItem11=/Game/Geometry/Meshes/Muro3/half_wall_txt_Causeway_wall_6
-MRUItem12=/Game/Geometry/Meshes/Muro3/half_wall_txt_Causeway_wall_2
-MRUItem13=/Game/Geometry/Meshes/Muro3/half_wall_txt_Causeway_wall_1
-MRUItem14=/Game/Geometry/Meshes/Muro3/half_wall_txt_Arch
-MRUItem15=/Game/Geometry/Meshes/Muro2/dafq
+MRUItem0=/Game/Geometry/Meshes/Muro2/dafq
+MRUItem1=/Game/Geometry/Meshes/Muro1/stone_wall_wall_stone_low
+MRUItem2=/Game/Geometry/Meshes/Muro1/stone_wall_wall_stone_medium
+MRUItem3=/Game/Geometry/Meshes/Muro3/half_wall_txt_Causeway_wall_7
+MRUItem4=/Game/Geometry/Meshes/Muro3/half_wall_txt_Causeway_wall_5
+MRUItem5=/Game/Geometry/Meshes/Muro3/half_wall_txt_Causeway_wall_4
+MRUItem6=/Game/Geometry/Meshes/Muro3/Giant_causeway_atlas1
+MRUItem7=/Game/Geometry/Meshes/Muro3/Big_rock_atlas
+MRUItem8=/Game/Geometry/Meshes/Muro3/half_wall_txt_polySurface3
+MRUItem9=/Game/Geometry/Meshes/Muro3/half_wall_txt_Stone
+MRUItem10=/Game/Geometry/Meshes/Muro3/half_wall_txt_Causeway_wall_3
+MRUItem11=/Game/Geometry/Meshes/Muro3/half_wall_txt_Wall_2
+MRUItem12=/Game/Geometry/Meshes/Muro3/half_wall_txt_Causeway_wall_6
+MRUItem13=/Game/Geometry/Meshes/Muro3/half_wall_txt_Causeway_wall_2
+MRUItem14=/Game/Geometry/Meshes/Muro3/half_wall_txt_Causeway_wall_1
+MRUItem15=/Game/Geometry/Meshes/Muro3/half_wall_txt_Arch
 MRUItem16=/Game/Geometry/Meshes/Muro1/stone_wall_wall_single_rock_2_001
 MRUItem17=/Game/Geometry/Meshes/Muro/Muro_01
 MRUItem18=/Game/Geometry/Meshes/Muro1/stone_wall_low_001
@@ -1957,6 +1957,7 @@ MRUItem19=/Game/Geometry/Meshes/Muro1/stone_wall_wall_single_rock_2
 /Game/Geometry/Meshes/Muro3/half_wall_txt_Causeway_wall_4.half_wall_txt_Causeway_wall_4=1
 /Game/Geometry/Meshes/Muro3/half_wall_txt_Causeway_wall_5.half_wall_txt_Causeway_wall_5=1
 /Game/Geometry/Meshes/Muro3/half_wall_txt_Causeway_wall_7.half_wall_txt_Causeway_wall_7=1
+/Game/Geometry/Meshes/Muro2/dafq.dafq=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
